Fix extra spacing

--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -3,7 +3,6 @@
 
 	&__links {
 		text-align: center;
-		margin: 0 (-$spacing-default);
 	}
 
 	&__link {
